--- a/templates/index.html
+++ b/templates/index.html
@@ -142,22 +142,28 @@
                       </tr>
                       <tr>
                         <th>
-                          <img src="https://loojiayin-employee.s3.amazonaws.com/ChongJunXian.jpeg" alt="Avatar" width="280px" height="280px" />                     
-                          </br> <h4><b style= "padding-left: 60px"> Chong Jun Xian</b></h4>
+                          <img src="https://yewkokwei-employee.s3.amazonaws.com/WenKang.png" alt="Avatar" width="280px" height="280px" />                     
+                          </br> <h4><b style= "padding-left: 60px"> Wong Wen Kang</b></h4>
                           <h5><b style= "padding-left: 100px"> CEO</b></h5>
-                          <h5><b style= "padding-left: 60px"> junxian@gmail.com</b></h5>
+                          <h5><b style= "padding-left: 60px"> wenkang@gmail.com</b></h5>
                         </th>
                         <th>
-                          <img src="https://loojiayin-employee.s3.amazonaws.com/LooJiaYin.jpeg" alt="Avatar" width="280px" height="280px" /> 
-                        </br> <h4><b style= "padding-left: 60px"> Loo Jia Yin</b></h4>
+                          <img src="https://yewkokwei-employee.s3.amazonaws.com/Kenny.png" alt="Avatar" width="280px" height="280px" /> 
+                        </br> <h4><b style= "padding-left: 60px"> Yew Kok Wei</b></h4>
                          <h5><b style= "padding-left: 100px"> CFO</b></h5>
-                         <h5><b style= "padding-left: 60px"> jiayin@gmail.com</b></h5>
+                         <h5><b style= "padding-left: 60px"> kenny@gmail.com</b></h5>
                         </th>
                         <th>
-                          <img src="https://loojiayin-employee.s3.amazonaws.com/ChuaMengSin.jpeg" alt="Avatar" width="280px" height="280px" /> 
-                        </br> <h4><b style= "padding-left: 60px"> Chua Meng Sin</b></h4>
+                          <img src="https://yewkokwei-employee.s3.amazonaws.com/KhaiWen.png" alt="Avatar" width="280px" height="280px" /> 
+                        </br> <h4><b style= "padding-left: 60px"> Teh Khai Wen</b></h4>
                         <h5><b style= "padding-left: 100px"> CTO</b></h5>
-                        <h5><b style= "padding-left: 60px"> mengsin@gmail.com</b></h5>
+                        <h5><b style= "padding-left: 60px"> khaiwen@gmail.com</b></h5>
+                        </th>
+                        <th>
+                          <img src="https://yewkokwei-employee.s3.amazonaws.com/YongSheng.png" alt="Avatar" width="280px" height="280px" /> 
+                        </br> <h4><b style= "padding-left: 60px"> Tay Yong Sheng</b></h4>
+                        <h5><b style= "padding-left: 100px"> CIO</b></h5>
+                        <h5><b style= "padding-left: 60px"> tysheng@gmail.com</b></h5>
                         </th>
                       </tr>
                     </table>  
