--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -251,8 +251,8 @@
                                                 class="align-left" action="/attendance/{{ attend[0] }}" enctype="multipart/form-data">
                                                 <div class="row">
                                                   <div class="mb-3">
-                                                    <label for="id" class="form-label">Employee ID</label>
-                                                    <input class="form-control" type="text" id="id" name="edit_emp_id" value="{{ attend[0] }}" disabled autofocus />
+                                                    <label for="id" class="form-label">Attendance ID</label>
+                                                    <input class="form-control" type="text" id="id" name="edit_emp_id" value="{{ attend[1] }}" disabled autofocus />
                                                   </div>
                                                   <div class="mb-3 col-md-6">
                                                     <label for="firstName" class="form-label">Check In Time</label>
