--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,7 @@
     <!-- Helpers -->
     <script src="{{ url_for('static', filename='assets/vendor/js/helpers.js') }}"></script>
 
+    <script src="{{ url_for('static', filename='assets/vendor/js/template-customizer.js') }}"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="{{ url_for('static', filename='assets/js/config.js') }}"></script>
