--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,7 @@
                         <th>
                           <h4 class="card-header"><b><u>Our Team</u></b></h4>
                           <h5 style= "padding-left: 26px" >We provide IT service</h5>
+                          <h5 style= "padding-left: 26px" ><em>Create, Creative and Captivate</em></h5>
                          
                         </th>  
                         
